--- a/pokemons/bulbasaur/bulbasaur.css
+++ b/pokemons/bulbasaur/bulbasaur.css
@@ -96,17 +96,17 @@ body {
 
 .content {
     display: flex;
-    justify-content:space-between;
-    width: 270px;
+    width: 500px;
     background-color: rgb(68, 198, 254);
-    padding: 2em;
+    padding: 4em;
     border-radius: 1em;
     margin: 0 auto;
+    margin-top: 2em;
 }
 
 .pokemon {
     background-color: #fff;
-    padding: 1em;
+    padding: 2em;
     
 }
 .pokemon img{
@@ -117,6 +117,58 @@ body {
 
 .content:hover {
     transition-duration: 0.5s;
-width: 500px;
+width: 900px;
 }
+.features{
+    margin-top: 5.5em;
+    line-height: 2.5em;
+    background-color: rgb(167, 175, 127);
+    height: 3.5em;
+    width: 55%;
+    text-align: center;
+    margin: 0 auto;
+}
+.card1{
+    background-color: rgb(250, 113, 132);
+    width: 55%;
+    height: 2em;
+    margin: 0 auto;
+    line-height: 2em;
+}
+.card2{
+    background-color: rgb(244, 184, 155);
+    width: 55%;
+    height: 2em;
+    margin: 0 auto;
+    line-height: 2em;
+}
+.card3{
+    background-color: rgb(248, 236, 171);
+    width: 55%;
+    height: 2em;
+    margin: 0 auto;
+    line-height: 2em;
+}
+.card4{
+    background-color: rgb(177, 183, 250);
+    width: 55%;
+    height: 2em;
+    margin: 0 auto;
+    line-height: 2em;
+}
+.card5{
+    background-color: rgb(199, 250, 169);
+    width: 55%;
+    height: 2em;
+    margin: 0 auto;
+    line-height: 2em;
+}
+.card6{
+    background-color: rgb(246, 173, 228);
+    width: 55%;
+    height: 2em;
+    margin: 0 auto;
+    line-height: 2em;
+}
+
 
