--- a/pokemons/bulbasaur/bulbasaur.css
+++ b/pokemons/bulbasaur/bulbasaur.css
@@ -30,7 +30,7 @@ ul {
 }
 
 body {
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .container {
@@ -47,6 +47,7 @@ img {
     height: 5em;
     width: 100vw;
 }
+
 .logo {
     margin-top: 2vh;
     margin-left: 2vw;
@@ -59,7 +60,8 @@ img {
     top: 0.7em;
     left: 25em;
 }
-.searchSection{
+
+.searchSection {
     background-color: rgb(186, 245, 68);
     height: 5em;
     width: 100vw;
@@ -78,19 +80,21 @@ a:hover {
     padding: 0.5%;
     background-color: #eed15e;
 }
+
 .navOptions2 {
     text-align: center;
     line-height: 2.5em;
     font-size: 2em;
-    
-    
+
+
 }
 
 
 body {
     background-color: aqua;
 }
-.container{
+
+.container {
     width: 100vw;
 }
 
@@ -107,19 +111,21 @@ body {
 .pokemon {
     background-color: #fff;
     padding: 2em;
-    
+
 }
-.pokemon img{
+
+.pokemon img {
     height: 300px;
     width: 300px;
-    
+
 }
 
 .content:hover {
     transition-duration: 0.5s;
-width: 900px;
+    width: 900px;
 }
-.features{
+
+.features {
     margin-top: 5.5em;
     line-height: 2.5em;
     background-color: rgb(167, 175, 127);
@@ -128,47 +134,51 @@ width: 900px;
     text-align: center;
     margin: 0 auto;
 }
-.card1{
+
+.card1 {
     background-color: rgb(250, 113, 132);
     width: 55%;
     height: 2em;
     margin: 0 auto;
     line-height: 2em;
 }
-.card2{
+
+.card2 {
     background-color: rgb(244, 184, 155);
     width: 55%;
     height: 2em;
     margin: 0 auto;
     line-height: 2em;
 }
-.card3{
+
+.card3 {
     background-color: rgb(248, 236, 171);
     width: 55%;
     height: 2em;
     margin: 0 auto;
     line-height: 2em;
 }
-.card4{
+
+.card4 {
     background-color: rgb(177, 183, 250);
     width: 55%;
     height: 2em;
     margin: 0 auto;
     line-height: 2em;
 }
-.card5{
+
+.card5 {
     background-color: rgb(199, 250, 169);
     width: 55%;
     height: 2em;
     margin: 0 auto;
     line-height: 2em;
 }
-.card6{
+
+.card6 {
     background-color: rgb(246, 173, 228);
     width: 55%;
     height: 2em;
     margin: 0 auto;
     line-height: 2em;
 }
-
-
